--- a/source/partials/_side_nav_bar.html.haml
+++ b/source/partials/_side_nav_bar.html.haml
@@ -28,6 +28,6 @@
       %a{ href: '#' } Contact
   %ul.list-unstyled.CTAs
     %li
-      %a.download{ href: 'https://bootstrapious.com/tutorial/files/sidebar.zip' } Download source
+      %a.contact{ href: 'https://bootstrapious.com/tutorial/files/sidebar.zip' } Contact Me
     %li
-      %a.article{ href: 'https://bootstrapious.com/p/bootstrap-sidebar' } Back to article
+      %a.work-with-me{ href: 'https://hirealexsmith.com' } Work With Me
