--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,5 +1,9 @@
 $dark-blue: #110f33;
+$dark-grey: #2e2e30;
+$light-grey: #47474a;
+//$light-grey: #69696e;
 $watermelon: #e00288;
+$bootstrap-blue: #007bff;
 
 body {
   font-family: 'Lato', sans-serif;
@@ -35,53 +39,6 @@ h1, h2, h3, h4, h5, h6 {
 /* ------------------------------------------------------------------------- */
 /*|                               SIDEBAR                                   |*/
 /* ------------------------------------------------------------------------- */
-
-/* DEMO STYLE */
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-body {
-  font-family: 'Poppins', sans-serif;
-  background: #fafafa;
-}
-
-p {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.1em;
-  font-weight: 300;
-  line-height: 1.7em;
-  color: #999;
-}
-
-a,
-a:hover,
-a:focus {
-  color: inherit;
-  text-decoration: none;
-  transition: all 0.3s;
-}
-
-.navbar {
-  padding: 15px 10px;
-  background: #fff;
-  border: none;
-  border-radius: 0;
-  margin-bottom: 40px;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-btn {
-  box-shadow: none;
-  outline: none !important;
-  border: none;
-}
-
-.line {
-  width: 100%;
-  height: 1px;
-  border-bottom: 1px dashed #ddd;
-  margin: 40px 0;
-}
-
-/* SIDEBAR */
 .wrapper {
   display: flex;
   width: 100%;
@@ -140,9 +97,14 @@ a:focus {
   left: 0;
   height: 100vh;
   z-index: 999;
-  background: #7386D5;
-  color: #fff;
+  background: $dark-grey;
+  color: #ffffff;
   transition: all 0.3s;
+
+  a {
+    color: #ffffff;
+    text-decoration: none;
+  }
 }
 
 #sidebar.active {
@@ -151,16 +113,16 @@ a:focus {
 
 #sidebar .sidebar-header {
   padding: 20px;
-  background: #6d7fcc;
+  background: $dark-grey;
 }
 
 #sidebar ul.components {
   padding: 20px 0;
-  border-bottom: 1px solid #47748b;
+  border-bottom: 1px solid $dark-grey;
 }
 
 #sidebar ul p {
-  color: #fff;
+  color: #ffffff;
   padding: 10px;
 }
 
@@ -171,14 +133,14 @@ a:focus {
 }
 
 #sidebar ul li a:hover {
-  color: #7386D5;
-  background: #fff;
+  color: #ffffff;
+  background: $watermelon;
 }
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
-  color: #fff;
-  background: #6d7fcc;
+  color: #ffffff;
+  background: $bootstrap-blue;
 }
 
 a[data-toggle="collapse"] {
@@ -196,7 +158,7 @@ a[data-toggle="collapse"] {
 ul ul a {
   font-size: 0.9em !important;
   padding-left: 30px !important;
-  background: #6d7fcc;
+  background: $light-grey;
 }
 
 ul.CTAs {
@@ -211,15 +173,15 @@ ul.CTAs a {
   margin-bottom: 5px;
 }
 
-a.download {
-  background: #fff;
-  color: #7386D5;
+a.contact {
+  background: $bootstrap-blue;
+  color: #ffffff;
 }
 
-a.article,
-a.article:hover {
-  background: #6d7fcc !important;
-  color: #fff !important;
+a.work-with-me,
+a.work-with-me:hover {
+  background: $bootstrap-blue;
+  color: #ffffff;
 }
 
 /* CONTENT STYLE */
