--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -14,6 +14,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Work Sans', sans-serif;
 }
 
+.banner {
+  max-height: 100vh;
+}
+
 #type-text {
   font-style: italic;
   font-weight: normal;
@@ -27,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .circle-image {
   height: auto;
-  width: 70%;
+  width: 50%;
   border-radius: 50%;
   margin: 20px;
   -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
