Add blank space above sidebarCollapse button

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -145,7 +145,7 @@ ul, li {
   align-items: flex-start;
   position: -webkit-sticky;
   position: sticky;
-  top: 0;
+  top: 20px;
   z-index: 999;
 }
 
