Add structured products page and update layout

--- a/source/partials/_past.html.haml
+++ b/source/partials/_past.html.haml
@@ -25,43 +25,9 @@
   I was in the honeymoon phase and loving every second of it. My summer
   internship had been a rotation program, so I had the opportunity to
   experience many different teams, but now I was on the structured
-  products team full-time. What is a structured product? The one-liner
-  on the brochure might read something like,
-%p
-  %span{ style: 'font-style: italic;' }
-    "Structured products are made up of several equity, commodity,
-    FX, and interest rate derivatives packaged with senior unsecured
-    debt to provide investors alternative investment vehicles to help
-    them meet and exceed their financial goals.""
-%p
-  Right? What the heck does all that even mean? Here's how I typically
-  explain it. Lets take a more normal investment, such as buying 1
-  share of Apple Inc. (aapl). If you bought that share when Apple was at
-  $100, and then it goes up to $105, you as an investor made a 5%
-  return. Apple stock went up 5%, you made 5%. This is a
-  %span{ style: 'font-style: italic;' }
-    linear payoff.
-  The investment went up 5%, you made 5%. That payoff looks like this:
-%p.text-center
-  = image_tag 'linear_graph.png', id: 'linear_graph', class: 'graph'
-%p
-  Now, back to structured products. By doing some super complicated
-  and magical financial sorcery, we created products that turned that
-  linear payoff into something more exotic like this:
-%p.text-center
-  = image_tag 'arn_graph.png', id: 'arn_graph', class: 'graph'
-%p
-  or this:
-%p.text-center
-  = image_tag 'step_up_graph.png', id: 'step_up_graph', class: 'graph'
-%p
-  Now if Apple went up 5%, you could make 15%. Or if Apple was simply
-  up by any amount you could make at least 30% while having 10% downside
-  protection. Pretty cool, right?
-%p
-  %small{ style: 'font-style: italic;' }
-    These are hypothetical examples and do not reflect actual
-    products or investment advice.
+  products team full-time. What is a structured product?
+  %a{ href: '/structured_products', target: '_blank' } Here
+  is more information with examples and visuals made by yours truly.
 %p
   So what did I do? I would model and price these products by analyzing
   roughly 15 different input variables (read: buzzwords) such as the
