Create new goals page and update goals

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -108,6 +108,10 @@
           %br
           %p
             = partial 'partials/future'
+          %br
+          %p.font-italic
+            %a{ href: '/goals', target: '_blank' } Here
+            you can see past goals and progress.
     #interests.row
       .col
         %hr
