--- a/source/partials/_side_nav_bar.html.haml
+++ b/source/partials/_side_nav_bar.html.haml
@@ -16,7 +16,7 @@
     %li
       %a{ href: '#interests' } Interests
     %li
-      %a{ href: '#' } Resume / CV
+      %a{ href: '/alex_smith_resume.pdf', target: '_blank' } Resume / CV
   %ul.list-unstyled.CTAs
     %li
       %a.contact{ href: 'https://bootstrapious.com/tutorial/files/sidebar.zip' } Contact Me
