Add footer and social icons to side nav

--- a/source/structured_products.html.haml
+++ b/source/structured_products.html.haml
@@ -40,3 +40,4 @@
         %small{ style: 'font-style: italic;' }
           These are hypothetical examples and do not reflect actual
           products or investment advice.
+= partial 'partials/footer'
