--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -64,7 +64,7 @@
     %title Alex | Software Engineer
 
   %body
-    = yield
-    -#= partial 'partials/footer'
-    -#= google_analytics_tag
+    .container
+      = yield
+      -#= google_analytics_tag
 
