--- a/source/partials/_side_nav_bar.html.haml
+++ b/source/partials/_side_nav_bar.html.haml
@@ -19,6 +19,26 @@
       %a{ href: '/alex_smith_resume.pdf', target: '_blank' } Resume / CV
   %ul.list-unstyled.CTAs
     %li
-      %a.contact{ href: 'https://bootstrapious.com/tutorial/files/sidebar.zip' } Contact Me
+      %a.contact{ href: 'mailto:workwithalexsmith@gmail.com', target: '_blank', "data-tooltip" => "I'll get back to you within 24 hours" } Contact Me
     %li
       %a.work-with-me{ href: 'https://hirealexsmith.com' } Work With Me
+  %ul.list-unstyled.social-media-icons.social-media-icon-links.hover-effect.text-center
+    %li
+      %a{ href: 'https://github.com/atsmith813', target: '_blank', "data-tooltip" => "Check out some code!" }
+        %i.fab.fa-github
+    %li
+      %a{ href: 'https://twitter.com/A_Smith223', target: '_blank', "data-tooltip" => "Don't judge me too hard by my liked Tweets..." }
+        %i.fab.fa-twitter
+    %li
+      %a{ href: 'https://www.instagram.com/allthingssmurff/', target: '_blank', "data-tooltip" => "I only have 6 pictures" }
+        %i.fab.fa-instagram
+    %li
+      %a{ href: 'https://www.facebook.com/alex.smiff.7', target: '_blank', "data-tooltip" => "I haven't posted in several years" }
+        %i.fab.fa-facebook
+    %li
+      %a{ href: 'https://dev.to/atsmith813', target: '_blank', "data-tooltip" => "I work here and write articles sometimes!" }
+        %i.fab.fa-dev
+    %li
+      %a{ href: 'https://medium.com/@A_Smith223', target: '_blank', "data-tooltip" => "I've written a few articles" }
+        %i.fab.fa-medium
+
