Copy over experience links

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -61,6 +61,8 @@
           describing the position. You can also check out my resume
           = succeed "." do
             %a{ href: '/alex_smith_resume.pdf', target: '_blank' } here
+          = partial 'partials/experience_links'
+
   #past.row
     .col
       %hr
