--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,6 +1,7 @@
 = partial 'partials/side_nav_bar'
 
 #content.active
+  = partial 'partials/mobile_nav_bar'
   = partial 'partials/menu_btn'
 
   .section.banner
