--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -27,8 +27,8 @@
 
     / Open Graph
     %meta{ content: 'website', property: 'og:type' }
-    %meta{ content: 'Alex Smith - Software Engineer and financial market aficionado', property: 'og:title' }
-    %meta{ content: 'https://hirealexsmith.com', property: 'og:url' }
+    %meta{ content: 'Alex Smith | Software Engineer', property: 'og:title' }
+    %meta{ content: 'https://alexsmith.codes', property: 'og:url' }
     %meta{ content: '/images/alex_smith_og.png', property: 'og:image' }
     %meta{ content: '/images/alex_smith_og.png', property: 'og:image:secure_url' }
     %meta{ content: 'Alex', property: 'profile:first_name' }
