Update Twitter url for new username

--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -22,7 +22,7 @@
                 %i.far.fa-envelope.fa-2x
               %a{ href: 'https://github.com/atsmith813', target: '_blank', "data-tooltip" => "Check out some code!" }
                 %i.fab.fa-github.fa-2x
-              %a{ href: 'https://twitter.com/A_Smith223', target: '_blank', "data-tooltip" => "Don't judge me too hard by my liked Tweets..." }
+              %a{ href: 'https://twitter.com/atsmith813', target: '_blank', "data-tooltip" => "Don't judge me too hard by my liked Tweets..." }
                 %i.fab.fa-twitter.fa-2x
               %a{ href: 'https://www.instagram.com/allthingssmurff/', target: '_blank', "data-tooltip" => "I only have 6 pictures" }
                 %i.fab.fa-instagram.fa-2x
@@ -32,4 +32,3 @@
                 %i.fab.fa-dev.fa-2x
               %a{ href: 'https://medium.com/@A_Smith223', target: '_blank', "data-tooltip" => "I've written a few articles" }
                 %i.fab.fa-medium.fa-2x
-
