--- a/source/partials/_side_nav_bar.html.haml
+++ b/source/partials/_side_nav_bar.html.haml
@@ -27,7 +27,7 @@
       %a{ href: 'https://github.com/atsmith813', target: '_blank', "data-tooltip" => "Check out some code!" }
         %i.fab.fa-github
     %li
-      %a{ href: 'https://twitter.com/A_Smith223', target: '_blank', "data-tooltip" => "Don't judge me too hard by my liked Tweets..." }
+      %a{ href: 'https://twitter.com/atsmith813', target: '_blank', "data-tooltip" => "Don't judge me too hard by my liked Tweets..." }
         %i.fab.fa-twitter
     %li
       %a{ href: 'https://www.instagram.com/allthingssmurff/', target: '_blank', "data-tooltip" => "I only have 6 pictures" }
@@ -41,4 +41,3 @@
     %li
       %a{ href: 'https://medium.com/@A_Smith223', target: '_blank', "data-tooltip" => "I've written a few articles" }
         %i.fab.fa-medium
-
