Add pixelized headshot with hover and click effect

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -8,7 +8,7 @@
     .row
       .col-12.col-md-6.offset-md-3
         .text-center
-          = image_tag 'headshot.jpeg', id: 'headshot', class: 'circle-image'
+          = image_tag 'alex_smith_pixelized.png', id: 'headshot', class: 'circle-image', onmouseover: "this.src='/images/alex_smith_wink_pixelized.png'", onmouseout: "this.src='/images/alex_smith_pixelized.png'"
     .row.mb-5
       .col-12.col-md-6.offset-md-3.text-center
         %h2#intro-text
