--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -23,6 +23,10 @@ h1, h2, h3, h4, h5, h6 {
   margin: 3em 0em;
 }
 
+#headshot {
+  cursor: pointer;
+}
+
 #type-text {
   font-style: italic;
   font-weight: normal;
