--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -50,6 +50,8 @@
     %link{ href: 'https://fonts.googleapis.com/css?family=Bangers&display=swap', rel: 'stylesheet' }
     %link{ href: 'https://fonts.googleapis.com/css?family=Work+Sans&display=swap', rel: 'stylesheet' }
     %link{ href: 'https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css', rel: 'stylesheet' }
+    %link{ href: 'https://unpkg.com/tippy.js@5/themes/light.css', rel: 'stylesheet' }
+
     = stylesheet_link_tag 'site'
 
     / JS
@@ -59,6 +61,8 @@
     %script{ src: 'https://cdn.jsdelivr.net/npm/typeit@5.5.0/dist/typeit.min.js' }
     %script{ src: 'https://kit.fontawesome.com/fcbba1af21.js', crossorigin: 'anonymous' }
     %script{ src: 'https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js' }
+    %script{ src: 'https://unpkg.com/popper.js@1' }
+    %script{ src: 'https://unpkg.com/tippy.js@5' }
 
     = javascript_include_tag 'site'
 
