Add books section and update side nav

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -123,7 +123,7 @@
     .col
       %hr
   .section
-    .row
+    .row.mb-5
       .col-12.col-md-8.offset-md-2
         %h3
           Hobbies and interests
@@ -144,4 +144,7 @@
               %p Golf
               %p Board games
               %p Social justice
+    .row
+      .col-12.col-md-8.offset-md-2
+        = partial 'partials/books'
   = partial 'partials/footer'
