--- a/source/partials/_side_nav_bar.html.haml
+++ b/source/partials/_side_nav_bar.html.haml
@@ -2,9 +2,9 @@
   .sidebar-header
     %h3 Hello there, how are you?
   %ul.list-unstyled.components
-    %li.active
-      %a.dropdown-toggle{ "aria-expanded" => "false", "data-toggle" => "collapse", :href => "#homeSubmenu" } About
-      %ul#homeSubmenu.collapse.list-unstyled
+    %li
+      %a.dropdown-toggle{ "aria-expanded" => "false", "data-toggle" => "collapse", :href => "#aboutSubmenu" } About
+      %ul#aboutSubmenu.collapse.list-unstyled
         %li
           %a{ href: '#about' } Summary
         %li
@@ -14,7 +14,12 @@
         %li
           %a{ href: '#future' } Future
     %li
-      %a{ href: '#interests' } Interests
+      %a.dropdown-toggle{ "aria-expanded" => "false", "data-toggle" => "collapse", :href => "#interestsSubmenu" } Interests
+      %ul#interestsSubmenu.collapse.list-unstyled
+        %li
+          %a{ href: '#interests' } Summary
+        %li
+          %a{ href: '#books' } Books
     %li
       %a{ href: '/alex_smith_resume.pdf', target: '_blank' } Resume / CV
   %ul.list-unstyled.CTAs
