Add DEV description

--- a/source/partials/_present.html.haml
+++ b/source/partials/_present.html.haml
@@ -90,4 +90,35 @@
     src="https://www.youtube.com/embed/CZTwJlIw2AA?rel=0&amp;showinfo=0"
     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
     picture-in-picture" allowfullscreen></iframe>
-
+%p#dev
+  %a{ href: 'https://dev.to/atsmith813/new-year-new-opportunity-same-me-i-ve-joined-the-dev-team-47k8', target: '_blank' } Recently I joined the team at
+  %a{ href: 'https://dev.to', target: '_blank' } DEV
+  working remotely as a Software Engineer! If you're not already familiar,
+  %a{ href: 'https://dev.to', target: '_blank' } DEV
+  is an open-source community of software developers getting together to help
+  one another out.
+%p
+  Currently, I'm on the Site Reliability Engineering (SRE) team with
+  %a{ href: 'https://twitter.com/molly_struve', target: '_blank' } Molly Struve
+  who is DEV's Lead Site Reliability Engineer. Together the SRE team makes sure
+  the platform remains scalable and performant for our 5mm+ unique monthly
+  vistiors.
+%p
+  DEV has quite the
+  = succeed "." do
+    %a{ href: 'https://docs.dev.to/technical-overview/stack/', target: '_blank' } tech stack
+  The highlights include:
+  %ul
+    %li Ruby on Rails
+    %li Preact
+    %li PostgreSQL
+    %li Redis
+    %li Sidekiq
+    %li Elasticsearch
+    %li and more!
+%p
+  As I mentioned, DEV is open-source so you can see all the
+  %a{ href: 'https://github.com/thepracticaldev/dev.to', target: '_blank' } code
+  and
+  %a{ href: 'https://github.com/thepracticaldev/dev.to/pulls?q=is%3Apr+author%3Aatsmith813', target: '_blank' } my contributions
+  for yourself!
