Add DEV experience link

--- a/source/partials/_experience_links.html.haml
+++ b/source/partials/_experience_links.html.haml
@@ -3,27 +3,33 @@
     .card.mb-3
       .card-body
         %h3.card-title
+          = link_to 'DEV (dev.to)', '#dev'
+        %p.card-text
+          Software Engineer
+    .card.mb-3
+      .card-body
+        %h3.card-title
           = link_to '#justice' do
             %span.d-block.d-md-inline-block Justice by
             %span.d-block.d-md-inline-block Iron Tree
         %p.card-text
-          Cofounder & creator
+          Cofounder & Creator
     .card.mb-3
       .card-body
         %h3.card-title
-          %a{ href: '#intrinio' }Intrinio
+          = link_to 'Intrinio', '#intrinio'
         %p.card-text
-          Software engineer
+          Software Engineer
     .card.mb-3
       .card-body
         %h3.card-title
-          %a{ href: '#ticketfire' }TicketFire
+          = link_to 'TicketFire', '#ticketfire'
         %p.card-text
-          Software engineer
+          Software Engineer
     .card.mb-3
       .card-body
         %h3.card-title
-          %a{ href: '#mentorcliq' }MentorcliQ
+          = link_to 'MentorcliQ', '#mentorcliq'
         %p.card-text
           Director of Higher Education
     .card.mb-3
