Refactor books and move link to book cover iamge

--- a/source/partials/_books.html.haml
+++ b/source/partials/_books.html.haml
@@ -5,12 +5,14 @@
   .card-columns
     - data.books.each do |book|
       .card.vw-50.vh-50
-        %img.card-img-top.book-img{ alt: "#{book.title} book cover", src: "/images/books/#{book.image_name}" }
+        - book_cover_image = image_tag("/images/books/#{book.image_name}",
+          class: 'card-img-top book-img',
+          alt: "#{book.title} book cover")
+
+        = link_to(book_cover_image, book.amazon_url, target: '_blank')
+
         .card-body
           %p.card-title.font-weight-bold
             = book.title
           %p.card-text.font-italic
             = "by #{book.author}"
-          %p.card-text
-            %small.text-muted
-              = link_to 'View on Amazon', book.amazon_url, target: '_blank'
