Update source code link in footer

--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -8,7 +8,7 @@
         %span
           %p.copy-source
             Source
-            %a{ href: 'https://github.com/atsmith813/hire-alex-smith', target: '_blank' } GitHub
+            %a{ href: 'https://github.com/atsmith813/alexsmith.codes', target: '_blank' } GitHub
             %br
             = "Copyright ©#{Date.today.year} Alexander Smith"
         %br
