Refactor music into partial and add to side nav

--- a/source/partials/_side_nav_bar.html.haml
+++ b/source/partials/_side_nav_bar.html.haml
@@ -20,6 +20,8 @@
           %a{ href: '#interests' } Summary
         %li
           %a{ href: '#books' } Books
+        %li
+          %a{ href: '#music' } Music
     %li
       %a{ href: '/alex_smith_resume.pdf', target: '_blank' } Resume / CV
   %ul.list-unstyled.CTAs
