Update location and code line breaks

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -30,25 +30,27 @@
           TLDR
         %p
           A borderline cold brew coffee addict and a Florida native currently
-          residing in Los Angeles, California, my name is Alexander Smith (Alex).
-          If I had to describe a
+          residing in Tampa, Florida, my name is Alexander Smith (Alex). If I
+          had to describe a
           %em "personal mission statement"
           , I'd say that mine is to provide others with opportunities -
           especially if it helps them move up the so-called socio-economic
           ladder.
         %p
-          While I call Tampa home, I was born in Baltimore, MD and I've
-          been to Germany more times than my fingers permit me to count. I have a
-          black belt in Taekwondo (it's been awhile though). I originally planned
-          to join the military and was in ROTC in High School. My friends call me
+          While I call Tampa home, I was born in Baltimore, MD and I've been to
+          Germany more times than my fingers permit me to count. I have a black
+          belt in Taekwondo (it's been awhile though). I originally planned to
+          join the military and was in ROTC in High School. My friends call me
           an adrenaline junkie because I love anything with an engine. I've had
           experience with 4-wheelers, go-karts, boats, jet skis, motorcycles,
           sports cars, and more. If it goes fast, I'm interested. Speaking of
           interested, want to learn more?  You can read more about...
         %p
-          %a{ href: '#past' } How I went from flipping burgers at the neighborhood DQ to Wall Street.
+          %a{ href: '#past' } How I went from flipping burgers at the
+          neighborhood DQ to Wall Street.
         %p
-          %a{ href: '#present' } How I retired from being a corporate mercenary and became a Full-Stack Developer at a startup.
+          %a{ href: '#present' } How I retired from being a corporate mercenary
+          and became a Full-Stack Developer at a startup.
         %p
           %a{ href: '#future' } What I'm working towards next.
         %p
@@ -63,8 +65,8 @@
         %h3
           Quick timeline of professional experience
         %p
-          Clicking on the company titles will take you to the section of my story
-          describing the position. You can also check out my resume
+          Clicking on the company titles will take you to the section of my
+          story describing the position. You can also check out my resume
           = succeed "." do
             %a{ href: '/alex_smith_resume.pdf', target: '_blank' } here
           = partial 'partials/experience_links'
@@ -128,10 +130,10 @@
         %h3
           Hobbies and interests
         %p
-          Hobbies and interests can be so vague...I like to think of this section
-          as answers to the question of, "what are some things that you would go
-          out of your way to do in your free time?". But that's not a cool title
-          so I still call these hobbies and interests.
+          Hobbies and interests can be so vague...I like to think of this
+          section as answers to the question of, "what are some things that you
+          would go out of your way to do in your free time?". But that's not a
+          cool title so I still call these hobbies and interests.
         %p
           .row
             .col.col-md-6.col-xs-6
