--- a/source/partials/_present.html.haml
+++ b/source/partials/_present.html.haml
@@ -122,3 +122,6 @@
   and
   %a{ href: 'https://github.com/thepracticaldev/dev.to/pulls?q=is%3Apr+author%3Aatsmith813', target: '_blank' } my contributions
   for yourself!
+%p
+  Oh yeah, I also decided to use the remote flexibility and after 10 years of
+  being away...I moved back to Tampa! 😎
