Update and refactor image swap
- Use teal bg headshot
- Move image paths to consts
- Update tooltip text

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -3,7 +3,7 @@
     .row
       .col-12.col-md-6.offset-md-3
         .text-center
-          - tippy_content = "<p><b>Click to see the real me!</b></p><p><em>If you'd like a pixelated image of yourself, check out <a href='https://instagram.com/awacatoo'>@awacatoo</a> on Instagram</em></p>"
+          - tippy_content = "<b>Click to see the real me!</b>"
           = image_tag 'alex_smith_pixelized.png',
             id: 'headshot',
             class: 'circle-image',
