MVP of new pages setup

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -68,6 +68,6 @@
 
   %body
     = partial 'partials/top_nav_bar'
-    .container
+    .container-fluid
       = yield
       = google_analytics_tag
