--- a/source/partials/_top_nav_bar.html.haml
+++ b/source/partials/_top_nav_bar.html.haml
@@ -1,15 +1,15 @@
 %nav.navbar.navbar-expand-lg.fixed-top.justify-content-center.py-3.bg-white.d-none.d-lg-flex
   .navbar-nav
-    %a.nav-item.nav-link.rounded{ href: '/' } Home
+    %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/' } Home
     .nav-item.dropdown
-      %a#aboutDropdownMenuLink.nav-link.dropdown-toggle.rounded{ 'aria-expanded' => 'false', 'aria-haspopup' => 'true', 'data-toggle' => 'dropdown', href: '/about' } About
+      %a#aboutDropdownMenuLink.nav-link.dropdown-toggle.rounded.font-weight-bold{ 'aria-expanded' => 'false', 'aria-haspopup' => 'true', 'data-toggle' => 'dropdown', href: '/about' } About
       .dropdown-menu{ 'aria-labelledby' => 'aboutDropdownMenuLink' }
         %a.dropdown-item{ href: '/about#past'} Past
         %a.dropdown-item{ href: '/about#present'} Present
         %a.dropdown-item{ href: '/about#future'} Goals
-    %a.nav-item.nav-link.rounded{ href: '/experience' } Experience
+    %a.nav-item.nav-link.rounded.font-weight-bold{ href: '/experience' } Experience
     .nav-item.dropdown
-      %a#interestsDropdownMenuLink.nav-link.dropdown-toggle.rounded{ 'aria-expanded' => 'false', 'aria-haspopup' => 'true', 'data-toggle' => 'dropdown', href: '/interests' } Interests
+      %a#interestsDropdownMenuLink.nav-link.dropdown-toggle.rounded.font-weight-bold{ 'aria-expanded' => 'false', 'aria-haspopup' => 'true', 'data-toggle' => 'dropdown', href: '/interests' } Interests
       .dropdown-menu{ 'aria-labelledby' => 'interestsDropdownMenuLink' }
         %a.dropdown-item{ href: '/interests#hobbies'} Hobbies
         %a.dropdown-item{ href: '/interests#books'} Books
