--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,9 +1,5 @@
 $theme-teal: #46AD9C;
-$dark-blue: #110f33;
-$dark-grey: #2e2e30;
-$light-grey: #47474a;
 $watermelon: #e00288;
-$bootstrap-blue: #007bff;
 
 body {
   font-family: 'Lato', sans-serif;
@@ -23,30 +19,45 @@ ul, li {
   font-weight: 200;
 }
 
+a, a:hover {
+  color: $theme-teal;
+}
+
 nav {
   a {
-    color: $theme-teal;
+    color: black;
+
+    .active {
+      color: $theme-teal;
+    }
   }
 
   a:hover {
-    background-color: $theme-teal;
-    color: white;
+    color: $theme-teal;
   }
 
   .dropdown-menu {
     a {
-      color: $theme-teal;
+      color: black;
+
+      .active {
+        color: $theme-teal;
+      }
     }
 
     a:hover {
-      background-color: $theme-teal;
-      color: white;
+      color: $theme-teal;
+      background-color: white;
     }
   }
 }
 
-.container {
-  padding-top: 6rem;
+.theme-teal-text {
+  color: $theme-teal !important;
+}
+
+.container-fluid {
+  padding-top: 4rem;
 }
 
 .quote,
@@ -69,32 +80,15 @@ nav {
   cursor: pointer;
 }
 
-#type-text {
-  font-style: italic;
-  font-weight: normal;
-}
-
-#name {
-  font-size: 5rem;
-  color: #007bff;
-  font-family: 'Bangers';
-}
-
-.banner {
-  margin-top: 0;
-}
-
 .circle-image {
   height: auto;
-  width: 50%;
+  width: 100%;
   border-radius: 50%;
-  margin: 20px;
   -webkit-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
   -moz-box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1);
 }
 
-.intro-text,
 .contact-text,
 .about-me-text {
   font-weight: normal;
@@ -153,6 +147,10 @@ nav {
   border-top: none !important;
 }
 
+.progress-bar {
+  background-color: $theme-teal;
+}
+
 .graph {
   width: 60%;
   height: auto;
@@ -190,7 +188,7 @@ nav {
 
 /* MEDIAQUERIES */
 @media (max-width: 768px) {
-  .container {
+  .container-fluid {
     padding-top: 0rem;
   }
 
@@ -207,71 +205,7 @@ nav {
   #content {
     width: calc(100% - 250px);
   }
-
-  .banner {
-    #intro-text,
-    #type-text,
-    #name-text {
-      font-size: 1.5rem;
-      padding: 0 10px;
-    }
-
-    #name {
-      font-size: 3rem;
-      padding: 0 5px;
-    }
-  }
-
 }
-
-/* ------------------------------------------------------------------------- */
-/*|                             FLOAT SHADOW                                |*/
-/* --------------------------------------------------------------------------*/
-.hvr-float-shadow {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-}
-
-.hvr-float-shadow:before {
-  pointer-events: none;
-  position: absolute;
-  z-index: -1;
-  content: '';
-  top: 100%;
-  left: 5%;
-  height: 10px;
-  width: 90%;
-  opacity: 0;
-  background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
-  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
-  /* W3C */
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform, opacity;
-  transition-property: transform, opacity;
-}
-
-.hvr-float-shadow:hover, .hvr-float-shadow:focus, .hvr-float-shadow:active {
-  -webkit-transform: translateY(-5px);
-  transform: translateY(-5px);
-  /* move the element up by 5px */
-}
-
-.hvr-float-shadow:hover:before, .hvr-float-shadow:focus:before, .hvr-float-shadow:active:before {
-  opacity: 1;
-  -webkit-transform: translateY(5px);
-  transform: translateY(5px);
-  /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
-}
-
 
 /* ------------------------------------------------------------------------- */
 /*|                              TOOLTIPS                                   |*/
