Remove target _blank for goals page

--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -45,5 +45,5 @@
           = partial 'partials/future'
         %br
         %p.font-italic
-          %a{ href: '/goals', target: '_blank' } Here
+          %a{ href: '/goals' } Here
           you can see past goals and progress.
